[package]
name = "ahoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = { version = "3.2", features = ["derive"] }
iced = { version = "0.4", features = ["svg", "debug", "tokio"] }
rusb = "0.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.19", features = ["sync"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"]}
octocrab = "0.15"
stderrlog = "0.5"
dfu-libusb = "0.2"
serde_json = "1.0"
serialport = "4.2"
iced_native = "0.5"
iced_futures = "0.4"
crossbeam-channel = "0.5"
iced_aw = "0.2.0"