[package]
name = "ahoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.16", features = ["derive"] }
crossbeam-channel = "0.5.6"
dfu-libusb = "0.3.0"
futures = "0.3.21"
iced = { version = "0.4.2", features = ["svg", "debug", "tokio"] }
iced_aw = "0.2.0"
iced_futures = "0.4.1"
iced_native = "0.5.1"
indicatif = "0.17.0"
log = "0.4.17"
octocrab = "0.16.0"
pirate-midi = { version = "0.1.0", path = "./libs/pirate-midi" }
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"] }
rusb = "0.9.1"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serialport = "4.2.0"
stderrlog = "0.5.3"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["sync"] }
