[package]
name = "Ahoy"
version = "0.6.0"
edition = "2021"
authors = ["Ahoy Contributors"]
license = "MIT"
description = "The cross-platform firmware installer for Pirate MIDI devices!"
homepage = "https://github.com/beckler/ahoy"
build = "build.rs"

[[bin]]
name = "ahoy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
async-std = "1.12.0"
clap = { version = "3.2.16", features = ["derive"] }
crossbeam-channel = "0.5.6"
dfu-libusb = "0.3.0"
futures = "0.3.21"
iced = { version = "0.4.2", features = ["svg", "image", "debug", "async-std"] }
iced_aw = "0.2.0"
iced_futures = "0.4.1"
iced_lazy = "0.1.1"
iced_native = "0.5.1"
indicatif = "0.17.0"
lazy_static = "1.4.0"
log = "0.4.17"
pirate-midi-rs = "1.1"
rusb = { version = "0.9.1", features = ["vendored"] }
self_update = { version = "0.30.0", features = ["archive-tar", "archive-zip", "rustls"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serialport = "4.2.0"
stderrlog = "0.5.3"
surf = { version = "2.3.2", features = ["h1-client-rustls"] }
thiserror = "1.0.31"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"