[package]
name = "pirate-midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
serde = { version = "1.0.139", features = ["derive"] }
serde-enum-str = "0.2.5"
serde_bytes = "0.11.6"
serde_json = "1.0.82"
serde_with = "2.0.0"
serialport = { version = "4.2.0", features = ["serde"] }
